Fix: wrap article actions to fit display
Set the dropdown width to match that of the parent display item and
flex wrap any items that extend beyond.

--- a/app/static/css/article-pages.css
+++ b/app/static/css/article-pages.css
@@ -193,6 +193,8 @@ textarea.form-text-header {
         left: 2.5rem;
     display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
+    width: 15rem;
     z-index: 1;
 }
 .no-results-icon {
